tests/snapshots/integration_tests__snapshot_tests__array_tiling_rewnif.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_rewnif.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a1+0 i+0 i+0) i+0) i+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 i+0 i+0) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (+ i+0 1) i+0) Z) (Read_Int_Int a+0 Z))",
    ],
}
