tests/snapshots/integration_tests__snapshot_tests__array_tiling_rewrev.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_rewrev.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a1+0 (+ i+0 1) val2+0) (+ i+0 1)) val2+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (+ i+0 1) val2+0) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 val1+0) low+1) (Read_Int_Int a+0 low+1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 val1+0) low+3) (Read_Int_Int a+0 low+3))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 val1+0) low+2) (Read_Int_Int a+0 low+2))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 val1+0) i+0) val1+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (+ i+0 1) val2+0) low+4) (Read_Int_Int a1+0 low+4))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 val1+0) Z) (Read_Int_Int a+0 Z))",
    ],
}
