tests/snapshots/integration_tests__snapshot_tests__array_tiling_tcpy.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_tcpy.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int acopy1+0 i+0 (Read_Int_Int a+0 i+0)) Z) (Read_Int_Int acopy1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) Z) (Read_Int_Int acopy+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int acopy1+0 i+0 (Read_Int_Int a+0 i+0)) i+0) (Read_Int_Int a+0 i+0))",
        "(= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) (- (* 2 S) (+ i+0 1))) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1))))",
    ],
}
