tests/snapshots/integration_tests__snapshot_tests__array_tiling_tcpy3.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_tcpy3.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) S) (Read_Int_Int acopy3+0 S))",
        "(= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) (- (* 2 S) (+ i+0 1))) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) i+0) (Read_Int_Int a+0 i+0))",
        "(= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) 2) (Read_Int_Int acopy3+0 2))",
        "(= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) (* 2 S)) (Read_Int_Int acopy2+0 (* 2 S)))",
        "(= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) Z) (Read_Int_Int acopy3+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) (- (* 3 S) (+ i+0 1))) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) (* 3 S)) (Read_Int_Int acopy2+0 (* 3 S)))",
        "(= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) (- (* 4 S) (+ i+0 1))) (Read_Int_Int acopy1+0 (- (* 4 S) (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) (- (* 4 S) (+ i+0 1))) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) 4) (Read_Int_Int acopy1+0 4))",
        "(= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) Z) (Read_Int_Int acopy2+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) (* 3 S)) (Read_Int_Int acopy1+0 (* 3 S)))",
        "(= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) i+2) (Read_Int_Int acopy2+0 i+2))",
        "(= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) 4) (Read_Int_Int acopy+0 4))",
        "(= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) (* 3 S)) (Read_Int_Int acopy+0 (* 3 S)))",
        "(= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) S) (Read_Int_Int acopy1+0 S))",
        "(= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) Z) (Read_Int_Int acopy1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) (* 2 S)) (Read_Int_Int acopy3+0 (* 2 S)))",
        "(= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) S) (Read_Int_Int acopy+0 S))",
        "(= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) (* 3 S)) (Read_Int_Int acopy3+0 (* 3 S)))",
        "(= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) 0) (Read_Int_Int acopy+0 0))",
        "(= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) Z) (Read_Int_Int acopy+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) 0) (Read_Int_Int acopy3+0 0))",
    ],
}
