tests/snapshots/integration_tests__snapshot_tests__array_tripl_access_init.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tripl_access_init.vmt",
    status: Panic,
    used_instantiations: [],
}
