tests/snapshots/integration_tests__snapshot_tests__array_two_counters_add.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_two_counters_add.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) N) (Read_Int_Int a+0 N))",
        "(= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) j+0) (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+0) i+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) j+2) (Read_Int_Int a+0 j+2))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) j+1) (Read_Int_Int a+0 j+1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) 0) (Read_Int_Int a+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) 0) (Read_Int_Int a+0 0))",
    ],
}
